fix alignment of main pages, add moving to boston

--- a/docs/lastfm.css
+++ b/docs/lastfm.css
@@ -1,4 +1,11 @@
 /* -- LastFM live music -- */
+.lastfm-now-playing-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 20em;
+}
+
 a.now-playing:hover, a.now-playing:focus {
   background: var(--highlight);
   color: var(--highlight-text);
@@ -6,7 +13,8 @@ a.now-playing:hover, a.now-playing:focus {
 
 .now-playing img {
   opacity: 0;
-  width: 20rem;
+  width: 16em;
+  height: 16em;
   height: auto;
 }
 
@@ -16,6 +24,7 @@ a.now-playing:hover, a.now-playing:focus {
 }
 
 .np-metadata {
+  text-align: center;
   max-width: 20rem;
   text-align: center;
   padding-top: 0.125rem;
